index.css
@font-face {
  font-family: 'montserratthin';
  src: url('montserrat-variablefont_wght-webfont.woff2') format('woff2'),
       url('montserrat-variablefont_wght-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;

}
@font-face {
  font-family: 'south_australiaregular';
  src: url('/fonts/SouthAustralia.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

body {
	font-family: 'montserratthin', sans-serif;
    width: 100%;
    margin: 0 auto;
    background-color: #FBFBFB;
    color:#414144;
    background-image: url(/corner-left-top.png);
    background-repeat: no-repeat;
    background-position: top left;
  
}

a {
  color: #414144;
  text-decoration: none;
}
.container {
  max-width: 1200px;
  width: 100%;
  margin:auto;
}

header {
    max-height: 140px;
    height: 100%;
    display: flex;
    flex-direction: row;
    max-width: 1200px;
    width: 100%;
    margin: 80px auto;
    justify-content: space-between;
    align-items: center;
}

.header__menu {
    display: flex;
    flex-direction: row;
    list-style: none;
    justify-content: space-between;
    max-width: 640px;
    width: 100%;
}

.header__menu__item{
    letter-spacing: 3px;
    text-transform: uppercase;
    font-size: 16px;
    cursor: pointer;
    text-decoration:none;
    color:#414144;
}


.header__burger__icon {
    display: none;
    cursor: pointer;
  }

  
  /* The Overlay (background) */
  .overlay {
  
    height: 100%;
    width: 0;
    position: fixed; 
    z-index: 10000;
    left: 0;
    top: 0;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0, 0.9); 
    overflow-x: hidden; 
    transition: 0.5s; 
  }
  
  /* Position the content inside the overlay */
  .overlay-content {
    position: relative;
    top: 25%; 
    width: 100%; 
    text-align: center; 
    margin-top: 30px; 
  }
  
  /* The navigation links inside the overlay */
  .overlay a {
    padding: 8px;
    text-decoration: none;
    font-size: 36px;
    color:#FBFBFB;
    display: block; 
    transition: 0.3s; 
  }
  /* Position the close button (top right corner) */
.overlay .closebtn {
    position: absolute;
    top: 20px;
    right: 45px;
    font-size: 60px;
  }
  
  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
  @media screen and (max-height: 450px) {
    .overlay a {font-size: 20px}
    .overlay .closebtn {
      font-size: 40px;
      top: 15px;
      right: 35px;
    }
  }
  @media only screen and (min-device-width : 320px) and (max-device-width : 1200px) {

    .header__menu, .header__icons {
        display: none;
      }
      .header__burger__icon {
        display: block;
      }

    }


    .block__presentation {
      display: flex;
      justify-content: space-between;
      max-width: 1064px;
      width: 100%;
      margin: 0 auto 50px;
    }
    .block__presentation__introduction {
      margin: 0px auto;
    }
    .block__presentation__title {

        font-family: 'south_australiaregular';
        font-size: 80px;
        color:#656D56;
        z-index: 1;
        position: relative;
        left: -100px;
        transform: rotate(-15deg);
        letter-spacing: 2px;
        margin: 20px auto;
    }

    .profil__picture{
      width: 380px;
      height: auto;
    }

    .block__presentation__description {
      margin: 0 auto;
      width: 80%;
      padding: 85px 0 0;
      line-height: 1.7em;
    }


    .projects__section {
      display: flex;
      justify-content: space-between;
      flex-direction: row;
      width: 100%;
      margin: 50px 0;
    }

    .projects__section img{
      width: 300px;
      height: auto;
      margin: 0 auto;
      display: flex;
    }

    .projects__section__item__title {
      background-color: #DDC0AE;
      width: 150px;
      height: 50px;
      display: flex;
      z-index: 1;
      position: relative;
      top: -30px;
    }
    .projects__section__item__title p {
      text-align: center;
      width: 100%;
      color:#A66851;
    }
    .projects__section__item__description {
      margin: -15px 35px 0;
      text-align: center;
    }

    .projects__menu {
      display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 60%;
    float: right;
    }

    .projects__menu__item {
      text-decoration:none;
      font-family:'montserratthin', sans-serif;
      font-size: 14px;
      text-transform: uppercase;
      color:#414144;
      letter-spacing: 2px;
    }
    .project__header {
      display: flex;
      align-items: center;
      margin: 50px auto;
    }
    
.title {
    width: 100%;
font-family: 'montserratthin', sans-serif;
font-size: 16px;
text-transform: uppercase;
letter-spacing: 3px;
text-align: center;
}
@media only screen and (max-width: 1023px) {

  .header {
    margin: 50px auto;
  }
  .header__logo {
    margin: 0 10px;
  }

.projects__section {
  flex-direction: column;
  margin-bottom: 0;
}
.projects__section__item {
  margin: 20px 10px;
}

.block__presentation {
  flex-direction: column;
}

.block__presentation__title {
  left: auto;
  font-size: 50px;
  margin: 60px auto 30px;
  text-align: center;
  transform: inherit;
}

.block__presentation__description {
  padding: 10px 0;
  text-align: center;
}

.block__presentation img {
  margin: 0 auto;
  width: 80%;
}

.block__expertises__item {
  margin: 10px 0;
}

.project__header {
  flex-direction: column;
}

.projects__menu {
  flex-direction: column;
  width: 100%;
  margin: 30px 0;
  text-align: center;
}

.project__header p {
  width: 100%;
  margin: 0 auto;
  text-align: center;
}

.project__header {
  align-items: center;
  margin: 50px auto auto;
}

.overlay a {
  font-size: 16px;
}
}

.button-52 {
  font-size: 16px;
  font-weight: 200;
  letter-spacing: 1px;
  padding: 20px 20px 13px;
  outline: 0;
  border: 2px solid #656D56;
  cursor: pointer;
  position: relative;
  background-color: rgba(0, 0, 0, 0);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  color:#FBFBFB;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 3px;
}

.button-52:after {
  content: "";
  background-color: #A4BBA9;
  width: 100%;
  z-index: -1;
  position: absolute;
  height: 100%;
  top: 7px;
  left: 7px;
  transition: 0.2s;
}

.button-52:hover:after {
  top: 0px;
  left: 0px;
}

@media (min-width: 768px) {
  .button-52 {
    padding: 20px 50px 13px;
  }
}

#block__skills {
  background-color: #A4BBA9;
  color:#FBFBFB;
  margin: -32px auto;
}

.skills__title {
  text-align: center;
  margin-bottom: 40px;
}

.block__skills__wrapper {
  text-align: center;
margin-bottom: 3rem;
display: flex;
flex-direction: row;
flex-wrap: wrap;
}

.block__skills__wrapper .icon__box{
  width: 12.5%;
}
@media only screen and (max-width: 1023px) {
  .block__skills__wrapper .icon__box {
    width: 49.5%;
  }
  svg {
    margin: -25px auto;
  }  
}

.block__skills__wrapper  .devicon {
color: #FBFBFB;
font-size: 3.5rem;
}

.container-img {
width: 70px;
display: block;
height: 3.5rem;
margin: 0 auto;
}




/* diapo projets */

label {
	color: #fff;
	transition: transform 400ms ease-out;
	display: inline-block;
  min-height: 100%;
	width: 100vw;
	height: 80vh;
	position: relative;
	z-index: 1;
	text-align: center;
	line-height: 100vh;
}

form {
	position: relative;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	white-space: nowrap;
}
input {
    position: absolute;
    visibility: hidden;
  }


.keys {
	position: fixed;
	z-index: 10;
	bottom: 0;
	left: 0;
	right: 0;
	padding: 1rem;
	color: #fff;
	text-align: center;
	transition: all 300ms linear;
	opacity: 0;
}

input:focus ~ .keys {
	opacity: 0.8;
}

input:nth-of-type(1):checked ~ label:nth-of-type(1), 
input:nth-of-type(2):checked ~ label:nth-of-type(2),
input:nth-of-type(3):checked ~ label:nth-of-type(3),
input:nth-of-type(4):checked ~ label:nth-of-type(4){
   z-index: 0;
}

input:nth-of-type(1):checked ~ label {
	transform: translate3d(0, 0, 0);
}

input:nth-of-type(2):checked ~ label {
	transform: translate3d(-100%, 0, 0);
}

input:nth-of-type(3):checked ~ label {
	transform: translate3d(-200%, 0, 0);
}

input:nth-of-type(4):checked ~ label {
	transform: translate3d(-300%, 0, 0);
}

label {
	background-size: cover;
	font-size: 3rem;
}

label[for="clubs"] {
	background-image: url(/illustration/cute-cats.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}
label[for="hearts"] {
	background-image: url(/moodboard.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}
label[for="spades"] {
	background-image: url(/carte-visite-fred-bour.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}
label[for="diamonds"] {
	background-image: url(/logo/logo-marion-photo.PNG);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}

label:before,
label:after {
	color: #a4bba9;
	display: block;
	background:#a4bba947;
	position: absolute;
	padding: 1rem;
	font-size: 3rem;
	height: 10rem;
	vertical-align: middle;
	line-height: 10rem;
	top: 50%;
	transform: translate3d(0, -50%, 0);
	cursor: pointer;
}

label:before {
	content: "\276D";
	right: 100%;
	border-top-left-radius: 50%;
	border-bottom-left-radius: 50%;
}

label:after {
	content: "\276C";
	left: 100%;
	border-top-right-radius: 50%;
	border-bottom-right-radius: 50%;
}

